--- a/index.html
+++ b/index.html
@@ -194,30 +194,30 @@
               <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-who" role="tabpanel" aria-labelledby="nav-who-tab">
                   <p>
-                    La Team Ethical Hackers est un club de jeunes développeurs et administrateurs
-                     réseaux qui vit le jour à l'université Alioune DIOP de Bambey au SENEGAL.<br> Créée en 2018, elle a pour vocation de créer et d'aider à la création des
-                       produits et services numériques à forte valeur ajoutée.<br> La Team Ethical Hackers est bien connue pour concevoir
-                        des applications web et mobiles et des plateformes innovantes et accrocheuses pour des startups, 
-                        entreprises, organisations et multinationales.<br> Notre équipe qualifiée et expérimentée est toujours
-                         prête à relever les défis afin d'apporter de la croissance à vos projets.
+                    La Team Ethical Hackers est un club de jeunes développeurs et administrateurs réseau né à l'Université
+                     Alioune DIOP de Bambey au Sénégal.<br> Fondée en 2018, sa mission est de créer et d'aider à la création des produits
+                      et services numériques à haute valeur ajoutée.<br> La Team Ethical Hackers est connue pour concevoir des applications
+                       et des plateformes Web et mobiles innovantes et convaincantes pour les startups, les entreprises, les organisations et 
+                       les multinationales.<br> Notre équipe qualifiée et expérimentée est prête à relever le défi et apporter de la croissance 
+                        à vos projets.
                   </p>
                 </div>
                 <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
                   <p>Notre vision est de contribuer à la révolution numérique en cours,<br> en participant activement à la 
-                    formation de jeunes africains<br> particulièrement de jeunes universitaires et aussi les encourager<br> 
-                    à l’auto-emploi dans le but de diminuer le taux de chômage en Afrique, expressément au Sénégal.<br>
-                    Dans les 10 années qui suivent, nous comptons surhausser considérablement le nombre de jeunes 
-                    Startups en Afrique. Le futur est numérique et nous envisageons de nous baigner dans ce futur avec
-                     nos propres solutions qui prennent en compte nos réalités sociétales.
+                    formation de la jeunesse africaine<br> particulièrement les jeunes universitaires et aussi les encourager<br> 
+                    à l’auto-emploi dans le but de réduire le chômage en Afrique, en particulier au Sénégal.<br>
+                    Au cours des 10 prochaines années, nous prévoyons d'augmenter considérablement le nombre de jeunes 
+                    Startups africaines.<br> L'avenir est numérique et nous envisageons de nous baigner dans ce futur avec
+                     nos propres solutions, en tenant compte de nos réalités sociales.
                   </p>
                 </div>
                 <div class="tab-pane fade" id="nav-history" role="tabpanel" aria-labelledby="nav-history-tab">
-                  <p>La team Ethical Hackers se veut être l'une des plus grandes Startups<br> dans le but de contribuer au développement des 
-                    Technologies de l'Information et de la Communication (TIC) au Sénégal, en Afrique et partout ailleurs.<br>
-                    L’objectif est de contribuer à la création de produits technologiques à forte valeur ajoutée qui règlent des problématiques 
-                    aussi bien en Afrique que dans le Monde.<br> En outre, nous contribuons également au processus d’innovation d’entreprises existantes 
-                    en les accompagnant dans leur transformation digitale. 
-                    Notre ambition est de devenir la startup numero 1 de la zone Ouest africaine.
+                  <p>La team Ethical Hackers veut être l'une des plus grandes Startups<br> et vise à contribuer au développement des Technologies de 
+                    l'Information et de la Communication (TIC) au Sénégal, en Afrique et ailleurs.<br>
+                    L'objectif est de contribuer à la création de produits technologiques à haute valeur ajoutée 
+                    pour résoudre les problèmes en Afrique et dans le monde.<br> De plus, nous contribuons au processus d'innovation des entreprises 
+                    existantes en accompagnant leur transformation numérique. 
+                    Notre objectif est de devenir la startup numero un de l'Afrique de l'Ouest.
                   </p>
                 </div>
               </div>
@@ -302,7 +302,7 @@
             <div class="service-content">
               <h4>Création de sites</h4>
               <p>
-                Nous vous proposons des sites simples et responsives
+                Nous fournissons des sites Web simples et réactifs 
                 pour augmenter la visibilité de votre entreprise.
               </p>
             </div>
@@ -577,7 +577,7 @@
             <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="footer-widget footer-text">
                     <br> <br><br><br><br>
-                    <p><span>Instagram : </span><a href="https://instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx"><i class="lni lni-arrow-top-right"></i> ETHICAL HACKERS</a></p><br>
+                    <p><span>Instagram : </span><a href="https://instagram.com/team_ethical_hackers?igshid=1mf7qqoq8v4nx"><i class="lni lni-arrow-top-right"></i>TEAM ETHICAL HACKERS</a></p><br>
                     <p><span>Linkedin : </span><a href="https://www.linkedin.com/company/team-ethical-hackers"><i class="lni lni-arrow-top-right"></i> TEAM ETHICAL HACKERS</a> </p><br>
                     <p><span>Github : </span><a href="https://github.com/TEAM-ETHICAL-HACKERS"><i class="lni lni-arrow-top-right"></i> TEAM ETHICAL HACKERS</a> </p>
                 </div>
