--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>TEAM ETHICAL HACKERS</title>
 
   <!--====== Favicon Icon ======-->
-  <link rel="icon" href="/assets/images/favicon.ico" />
+  <link rel="icon" href="/assets/images/favicon1.ico" />
 
   <!--====== Bootstrap css ======-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
