--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <div class="single-image">
               <img src="assets/images/team/team-11.jpg" alt="Lamine Ayoba GUEYE" />
               <h5 class="mt-3">LAMINE A GUEYE</h5>
-                <p>Laravel Dev & Designer</p>
+                <p>Laravel Dev & DataScientiste</p>
             </div>
             <div class="single-image">
               <img src="assets/images/team/team-9.jpg" alt="Mouhamadou Moustapha TRAORE" />
