--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <div class="single-image">
               <img src="assets/images/team/team-3.jpg" alt="Fallou TOURE" />
               <h5 class="mt-3">FALLOU TOURE</h5>
-                <p>Frontend Dev & Inovation </p>
+                <p>Frontend Dev & Innovation </p>
             </div>
             <div class="single-image">
               <img src="assets/images/team/team-4.jpg" alt="Abdoulaye NDIAYE" />
@@ -512,7 +512,7 @@
             </div>
             <div class="single-image">
               <img src="assets/images/team/team-7.jpg" alt="ElHadji Serigne MBACKE" />
-              <h5 class="mt-3">ELHADJI S MBACKE</h5>
+              <h5 class="mt-3">EL HADJI SERIGNE MBACKE</h5>
               <p>DevOps & Software Architect</p>
             </div>
             <div class="single-image">
